最终发布版

--- a/docs/安装教程.md
+++ b/docs/安装教程.md
@@ -25,4 +25,11 @@ npm run doracms
 浏览器通过以下方式访问（具体访问地址依赖于第一步的配置）
 
 * [开发环境](http://127.0.0.1:8080)
-* [生产环境](http://120.25.150.169:8080)只配了IP，端口号已加入安全组
+* [生产环境](http://你的ip:8080)只配了IP，端口号已加入安全组
+
+使用系统前前先进入菜单栏的系统配置进行配置，有关配置有文章教程在文章列表里：
+
+* 超级管理员 账号：doramart，密码：dm151ADMIN*
+* 文章管理员 账号：xiaosheng，密码：xs151ADMIN*
+
+超级管理员账号有很大的权限，不要轻易使用。
