提示版本,修改默认初始化数据

--- a/docs/二次开发.md
+++ b/docs/二次开发.md
@@ -223,3 +223,9 @@ getOpt = function (key) {
 ### 无权限查看该文章
 
 只有审核通过的文章才能被查看
+
+### 模板版本不适用
+
+如果没导入，将模板根目录下的`tempconfig.json`文件中的版本号修改到对应的版本号，再导入即可。
+
+如果已导入，那么需要修改数据库表`contenttemplates`中的`version`数据
