完善安装教程

--- a/docs/安装教程.md
+++ b/docs/安装教程.md
@@ -16,9 +16,15 @@
 
 ## 代码根目录执行
 
+可以先在根目录执行依赖安装：
+
+```javascript
+yarn
+```
+
 此处通过执行脚本省去了安装依赖，配置文件修改等操作，大概需要几分钟的时间，请耐心等待，如果有提示错误，请根据提示做相应的调整
 
-```jscript
+```javascript
 npm run doracms
 ```
 
