在教程中增加手动编译打包操作,此动作不在依赖于全局vue-cli(如果是vue-cli3.0则会报错)

--- a/docs/安装教程.md
+++ b/docs/安装教程.md
@@ -39,17 +39,24 @@ yarn
 yarn global add pm2
 ```
 
+手动编译打包操作，到`/backstage/build`目录下运行：
+
+```javascript
+yarn installModules
+yarn buildDevModules
+```
+
 此处通过执行脚本省去了安装依赖，配置文件修改等操作，大概需要几分钟的时间，请耐心等待，如果有提示错误，请根据提示做相应的调整
 
 ```javascript
-npm run doracms
+yarn doracms
 ```
 
 浏览器通过以下方式访问（具体访问地址依赖于第一步的配置）
 
 * [开发环境](http://127.0.0.1:8080)
 * [生产环境](http://你的ip:8080)只配了IP，端口号已加入安全组
-* [管理后台](http://127.0.0.1:8080/admin)
+* [管理后台](http://127.0.0.1:8080/dr-admin)
 
 使用系统前前先进入菜单栏的系统配置进行配置，有关配置有文章教程在文章列表里：
 
